fixed issue with horizontal scrollbar showing when search results render

--- a/src/components/scss/Navbar.scss
+++ b/src/components/scss/Navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #010b26;
-  width: 100vw;
+  width: 100%;
 
   &__list {
     display: flex;
